# Quran-Video-Studio

./: .gitignore  README copy.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
public/: robots.txt  sitemap.xml
public/icon/: site.webmanifest
src/: index.css  index.tsx
src-tauri-config/: Cargo.toml  tauri.conf.json
src-tauri-config/capabilities/: default.json
src-tauri-config/icons/: icon.icns
src-tauri-config/src/: main.rs
src/app/: App.tsx
src/config/: app-info.json
src/features/audio/hooks/: useAudioRecorder.ts
src/features/quran/: types.ts
src/features/quran/data/: surahs.ts
src/features/quran/hooks/: useQuranData.ts
src/features/video-editor/: types.ts
src/features/video-editor/components/: VideoCanvas.tsx
src/features/video-editor/hooks/: useAssetLoader.ts  useFontLoader.ts  useProjectExporter.ts  useVideoExporter.ts
src/features/video-editor/utils/: drawing-utils.ts  render-strategies.ts
src/layouts/: Sidebar.tsx
src/layouts/sidebar/: SidebarAudio.tsx  SidebarFormat.tsx  SidebarLayout.tsx  SidebarSelection.tsx  SidebarStyle.tsx  SidebarTypography.tsx
src/shared/components/: AboutOverlay.tsx  ColorPicker.tsx  DesktopControls.tsx  ToggleSwitch.tsx  Tooltip.tsx
src/shared/constants/: index.ts
src/shared/types/: index.ts
src/shared/utils/: platform.ts  tauri-fs.ts
